.helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
  - name: http
    port: 3001
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nocodb
spec:
  selector:
    app: nocodb
  ports:
  - name: http
    port: 8080
    protocol: TCP
