.helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: app
spec:
  rules:
    - http:
        paths:
          - path: /farms
            pathType: Prefix
            backend:
              service:
                name: farms
                port:
                  number: 3001
